message recieved by farmer
