# backend/src/swagger_output.json
@@ -615,9 +615,7 @@
             "description": "Internal Server Error"
           }
         }
-      }
-    },
-    "/api/farmer-request/farmer-request": {
+      },
       "get": {
         "description": "",
         "responses": {
